--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 									<h1 class="major">MY PORTFOLIO<br />
 										
 									</h1>
-									<p>A showcase of my projects and abilities from TRISTAN ROBINSON</p>
+									<p>A showcase of my projects and abilities from TRISTAN ROBINSON!!</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
